[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jtree"
version = "0.1.4"
description = "jtree is a command interface for displaying JSON (JavaScript Object Notation)"
readme = "README.md"
authors = [{ name = "Oleksis Fraga Menéndez", email = "oleksis.fraga@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["json", "explorer", "tui", "viewer"]
dependencies = [
    "textual >= 0.6.0",
]
requires-python = ">=3.7"

[project.optional-dependencies]
dev = ["black", "bumpver", "isort", "pip-tools", "pytest", "pipdeptree", "debugpy"]

[project.urls]
Homepage = "https://github.com/oleksis/jtree"

[project.scripts]
jtree = "jtree.__main__:main"

[tool.bumpver]
current_version = "0.1.4"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "bump version {old_version} -> {new_version}"
commit = true
tag = true
push = false

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
    'version = "{version}"',
]
"jtree/__init__.py" = [
    "{version}",
]

[tool.black]
includes = "jtree"

[tool.isort]
profile = "black"
src_paths = ["jtree", "tests"]
